# rl_poly5

./: README.md  cycle-summary-5m-1772397985623.jsonl  pyproject.toml
configs/: backtest.yaml  base.yaml  train_rl.yaml  train_supervised.yaml
scripts/: train_rl.py
src/rl_hybrid/: cli.py
src/rl_hybrid/agents/: heuristic.py
src/rl_hybrid/data/: alignment.py  loaders.py  schema.py
src/rl_hybrid/env/: market_env.py
src/rl_hybrid/eval/: backtest.py  metrics.py
src/rl_hybrid/features/: engineering.py  episodes.py  transform.py
src/rl_hybrid/models/: dqn.py  supervised.py
src/rl_hybrid/sim/: maker.py  orders.py  pnl.py  taker.py
src/rl_hybrid/train/: data_pipeline.py  rl_pipeline.py  supervised_pipeline.py
src/rl_hybrid/utils/: config.py  logging_utils.py  seeding.py  serialization.py
tests/: test_data.py  test_features_env.py  test_sim.py  test_smoke_pipeline.py
